# CPP-SFML-Playground

./: .gitignore  README.md
AutoCardBattle/: CMakeLists.txt
AutoCardBattle/devnote/: 20250918.md
AutoCardBattle/src/script/: card.cpp  decl.hpp  func.cpp  game.cpp  scenegame.cpp
CardRPG/: CMakeLists.txt
CardRPG/src/: main  main.cpp  makefile
CardRPG/src/script/: decl.hpp  fdef.hpp  func.cpp  func.hpp  game.cpp  game.hpp  general.hpp  player.cpp  render.cpp  scenefield.cpp  scenefield.hpp  scenetitle.cpp  scenetitle.hpp  shape.cpp  shape.hpp
CardRPGTest/src/: main  makefile
CardRPGTest/src/script/: battle.hpp  c.cpp  field.hpp  func.cpp  game.cpp  game.hpp  general.hpp  player.hpp
LegacyOpenGL/: CMakeLists.txt
LegacyOpenGL/src/: main  main.cpp  makefile
OpenGLSimple/: main  main.cpp  makefile
Roguelike/src/: main.cpp
Roguelike/src/code/: data.hpp  decl.hpp  func.cpp  ui.cpp
SFML_OpenGL/: CMakeLists.txt
SFML_OpenGL/src/: main  main.cpp  main1.cpp  makefile
SFML_OpenGL/src/shader/: fragment.frag  vertex.vert
autocardbattle/: CMakeLists.txt  README.md
autocardbattle/src/: main.cpp
autocardbattle/src/script/: card.cpp  decl.hpp  func.cpp  game.cpp  render.cpp  scenebattle.cpp  scenecollection.cpp  sceneready.cpp  scenetitle.cpp  ui.cpp
autocardbattle1/src/script/: general.hpp
cardadventure/: CMakeLists.txt
cardadventure/src/: main.cpp
cardadventure/src/code/: general.hpp
physics2d/: CMakeLists.txt
physics2d/src/: main.cpp
platformer/: CMakeLists.txt  LICENSE.md
platformer/devnote/: 20251017.md
platformer/src/: main.cpp  makefile
roguelike/: CMakeLists.txt  README.md
roguelike/devnote/: 20251017.md  20251024.md  20251025.md
roguelike/src/: main.cpp  makefile
template3dhud/: Makefile  main.cpp
(+66 files in other folders)
